force-app/main/default/objects/leaseworks__Delinquency_Data__c/leaseworks__Delinquency_Data__c.object-meta.xml
<CustomObject>
    <description>Delinquency Data</description>
    <label>Z_Unused_OP Delinquency</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_OP Delinquencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>