force-app/main/default/objects/leaseworks__Delinquency_Data__c/fields/leaseworks__Change__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Change__c</fullName>
    <formula>/*Last_Delinquency_History__r.Pct_Change__c*/null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP Change %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>