force-app/main/default/objects/leaseworks__Delinquency_Data__c/fields/leaseworks__Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Days_Past_Due__c</fullName>
    <formula>/*IF(TODAY() &gt;  Due_Date__c,  TODAY() -  Due_Date__c, null)*/null</formula>
    <label>Z_Unused_OP Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>