force-app/main/default/objects/leaseworks__Delinquency_Data__c/fields/leaseworks__Description__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Description__c</fullName>
    <label>Z_Unused_OP Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>