force-app/main/default/objects/leaseworks__Delinquency_Data__c/fields/leaseworks__Last_Delinquency_History__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_Delinquency_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Latest Delin History</label>
    <referenceTo>leaseworks__Delinquency_History__c</referenceTo>
    <relationshipLabel>Delinquencies</relationshipLabel>
    <relationshipName>Delinquencies</relationshipName>
    <type>Lookup</type>
</CustomField>