force-app/main/default/objects/leaseworks__Delinquency_Data__c/fields/leaseworks__Rent_Current_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Current_Period__c</fullName>
    <formula>/*Last_Delinquency_History__r.Current_Rent_Balance__c*/null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP {Rent}</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>