force-app/main/default/objects/leaseworks__Delinquency_Data__c/fields/leaseworks__Y_Hidden_Closed_Report__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Closed_Report__c</fullName>
    <formula>/*IF( Closed__c =  TRUE, &quot;Y&quot;,&quot;N&quot;)*/null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP {Closed (Report)}</label>
    <type>Text</type>
</CustomField>