force-app/main/default/objects/leaseworks__Delinquency_Data__c/fields/leaseworks__Y_Hidden_Engine_Report__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Engine_Report__c</fullName>
    <label>Z_Unused_OP {Engine (Report)}</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>