force-app/main/default/objects/leaseworks__Delinquency_Data__c/fields/leaseworks__Y_Hidden_Total_Other_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Total_Other_Invoice_Amount__c</fullName>
    <label>Z_Unused_OP {Total Other Invoice Amount}</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>