force-app/main/default/objects/leaseworks__Delinquency_Data__c/validationRules/leaseworks__InvoiceTypeRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__InvoiceTypeRequired</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>