force-app/main/default/objects/leaseworks__Delinquency_Data__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Due_Date__c</columns>
    <columns>leaseworks__Operator__c</columns>
    <columns>leaseworks__Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>