force-app/main/default/objects/leaseworks__Delinquency_Data__c/listViews/leaseworks__All1.listView-meta.xml
<ListView>
    <fullName>leaseworks__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>